			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2577 2004/04/01 02:27:06 itojun Exp $

<200404>

<200403>
Mar 31 JST 2004  itojun@iijlab.net
	* *bsd*/sys/netinet*/udp*_usrreq.c: forbid IPv6 UDP packet without
	  checksum.  found by keiichi@kame.net

Wed Mar 31 15:47:19 JST 2004 sakane@kame.net
	* kame/kame/racoon/isakmp.c:
	fixed a critical bug in the case of FreeBSD.  racoon will reject
	the packet in which the value of the length field is too big.
	however the problem is due to malloc(3) of FreeBSD.

2004-03-29  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* freebsd[45]/sys/netinet/in.c, kame/sys/netinet6/mldv2.c
	fixed a kernel crash when an IGMPv3/MLDv2 Advanced-API function
	is used. (specific to IGMPv3/MLDv2-ready freebsd[45] kernel)

2004-03-21  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/dhcp6: added experimental support for the lifetime
	option based on draft-ietf-dhc-lifetime-00.txt.  dhcp6c now
	restarts information-request/reply exchanges when it has received
	the option and the lifetime expires.

2004-03-19  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/kame/mld6query: to receive an MLD report for any group, 
	it behaves like an IPv6 multicast daemon, instead of joining to ::.
	If cannot, just transmits MLDv1 Queries.

2004-03-17  MOMOSE Tsuyoshi  <momose@az.jp.nec.com>
	* dest6.c: A Binding Error against a packet including an invalid 
	home address is sent only when the packet is not Binding Update.
	This problem was found by the v6pc conformance test tool and fixed 
	with help by Noriko Mizusawa <mizusawa@mitaka.ntt-at.co.jp> in the
	team.

Wed Mar 17 08:47:58 JST 2004  itojun@iijlab.net
	* netbsd: switch to 1.6.2

2004-03-16  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/sys/netinet6/{ip6_output.c, mldv2.c, in6_msf.c, in_msf.h}:
	IGMPv3/MLDv2 is revived!

2004-03-14  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* freebsd4/sys/kern/uipc_syscalls.c (sockargs): allow more than