@@ -1,9 +1,15 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.2577 2004/04/01 02:27:06 itojun Exp $
+$KAME: CHANGELOG,v 1.2578 2004/04/02 04:19:19 suz Exp $
 
 <200404>
 
 <200403>
+2004-04-02  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
+	* freebsd[45]/sys/netinet/igmp.c
+	fixed a freebsd-specific bug that IGMPv3 Query is ignored, due to 
+	a endian problem within kernel.
+	ToDo: code refinement to share IGMPv3 codes among *BSDs.
+
 Mar 31 JST 2004  itojun@iijlab.net
 	* *bsd*/sys/netinet*/udp*_usrreq.c: forbid IPv6 UDP packet without
 	  checksum.  found by keiichi@kame.net
